package com.rocket.radar.qr;

/**
 * Stub class for testing umlink.
 * This is a simplified version extracted from an Android project.
 * Original uses android.graphics.Bitmap which is not available without Android SDK.
 */
public class QRGenerator {
    public QRGenerator() {
    }

    // Note: Original return type is android.graphics.Bitmap
    // Using Object as a placeholder for the stub
    public static Object generate(String eventId) {
        return null;
    }
}
