---
title: My class diagram
umlink:
  groupPackage: true
---

classDiagram

class MainActivity

class Notification

class NotificationAdapter

class NotificationAdapter_NotificationViewHolder

class NotificationAdapter_SeparatorViewHolder

class NotificationAdapter_EmptyViewHolder

class NotificationRepository

class QRGenerator

NotificationAdapter <-- Notification
NotificationAdapter --> NotificationAdapter_NotificationViewHolder
NotificationAdapter <-- NotificationAdapter_SeparatorViewHolder
NotificationAdapter --> NotificationAdapter_EmptyViewHolder
NotificationRepository --> Notification
MainActivity --> NotificationRepository
